--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -191,6 +191,17 @@ graphics-engine {
     color: white;
 }
 
+networking {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 83%;
+    gap: 1.6rem;
+    padding-bottom: 8rem;
+    color: white;
+}
+
+
 .contact-box {
     display: flex;
     flex-direction: column;
