--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -61,6 +61,10 @@
     background-image: url(../../assets/images/green-grid-background.png);
 }
 
+.blue-wavy-background {
+    background-image: url(/assets/images/Blue-Wavy-Background.png);
+}
+
 .move-prompt {
     display: flex;
     justify-content: center;
