better above-fold text

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -60,6 +60,7 @@
 }
 
 .rightside {
+    gap: 10px;
     flex-basis: 40%;
     font-size: 18pt;
     text-align: center;
@@ -82,7 +83,7 @@
     position: relative;
     width: 11vw;
     height: 11vw;
-    margin-top: 32%;
+    margin-top: 19%;
     cursor: pointer;
 }
 
