proper fullscreen toggle svg

--- a/src/app/windows/window-card/window-card.component.html
+++ b/src/app/windows/window-card/window-card.component.html
@@ -15,8 +15,8 @@
                 </div>
             </div>
             <!--clean up this fillscreentoggle-->
-            <div style="background-color: rgba(255, 0, 0, 0.762); width: 45px; height: 45px; position: absolute; right: 0px; top: 0px; cursor: pointer;"
-                (click)="toggleFullscreen()"></div>
+            <img src="assets/svgs/fullscreen_FILL0_wght400_GRAD0_opsz48.svg" class="fullscreen-toggle"
+                alt="Fullscreen Toggle" (click)="toggleFullscreen()">
         </div>
         <div #media_shadow class="media-shadow"></div>
     </div>
