--- a/src/app/windows/window-card/window-card.component.sass
+++ b/src/app/windows/window-card/window-card.component.sass
@@ -15,6 +15,14 @@ $default-platform-color: rgb(153 151 215)
         height: 97%
         background-color: $default-platform-color
 
+        .fullscreen-toggle
+            width: 45px
+            height: 45px
+            position: absolute
+            right: 0px
+            top: 0px
+            cursor: pointer
+
     .media-shadow
         width: 97%
         height: 97%
