--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -16,114 +16,52 @@
                 <p>Iota Soluition Configurator</p>
                 <div class="fluff">
                     <p>
-                        A Software solution for configuring a parts of a product that are required to pass tests and be compatible.
-                        Project was written using the Angular Framework for frontend, and a mix of Rust tide and NodeJS for the backend 
+                        A Software solution for configuring a parts of a product that are required to pass tests and be
+                        compatible.
+                        Project was written using the Angular Framework for frontend, and a mix of Rust tide and NodeJS
+                        for the backend
                     </p>
                 </div>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>
-                            Initial Sketch going from framework to theming
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/initial sketch.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
-                <div class="desc-and-media reverse">
-                    <div id="desc">
-                        <p>
-                            Here is the first iteration running. It looks rough compared to the design because what is
-                            most importtant is to get feedback on the design. Reducing wasted effort
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/initial sketch running.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>
-                            After getting feedback I go back the the sketchboard and use the feedback given to design a
-                            better product
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/iteration 1.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
-                <div class="desc-and-media reverse">
-                    <div id="desc">
-                        <p>
-                            And here we a see a more polished version of the software running.
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/iteration 1 running.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
+                <general-card text="Initial Sketch going from framework to theming."
+                    [media]="[{mediaURL: 'assets/videos/initial sketch.mp4', image: false}]" colour="#d15e12"
+                    shadowColour="#7a3c12" [widthDif]="90" [heightDif]="-20">
+                </general-card>
+                <general-card text="Here is the first iteration running. It looks rough compared to the design because what is
+                most importtant is to get feedback on the design. Reducing wasted effort."
+                    [media]="[{mediaURL: 'assets/videos/initial sketch running.mp4', image: false}]" colour="#d15e12"
+                    shadowColour="#7a3c12" [widthDif]="90" [heightDif]="-20">
+                </general-card>
+                <general-card text="After getting feedback I go back the the sketchboard and use the feedback given to design a
+                better product." [media]="[{mediaURL: 'assets/videos/iteration 1.mp4', image: false}]" colour="#d15e12"
+                    shadowColour="#7a3c12" [widthDif]="90" [heightDif]="-20" reverse>
+                </general-card>
+                <general-card text="Here we a see a more polished version of the software running."
+                    [media]="[{mediaURL: 'assets/videos/iteration 1 running.mp4', image: false}]" colour="#d15e12"
+                    shadowColour="#7a3c12" [widthDif]="90" [heightDif]="-20" reverse>
+                </general-card>
             </div>
             <div class="divider"></div>
             <div class="project">
                 <p>Portfolio Website</p>
                 <div class="fluff">
                     <p>
-                        The process of designing this website, the below elements were made with the use of Adobe XD, Adobe Photoshop and Adobe After Effects
+                        The process of designing this website, the below elements were made with the use of Adobe XD,
+                        Adobe Photoshop and Adobe After Effects
                     </p>
                 </div>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>
-                            An example showing my proccess of frameworking a website
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/hippy_Frameworking.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
-                <div class="desc-and-media reverse">
-                    <div id="desc">
-                        <p>
-                            After making the framwework of a website, i begin with the colours.
-                            Making the general theme of the website
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/hippy_Theming.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>
-                            And finally, before any html is writting, I go through iterations that had previously not
-                            been thought about
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/hippy_Finalising.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
+                <general-card text="An example showing my proccess of frameworking a website."
+                    [media]="[{mediaURL: 'assets/videos/hippy_Frameworking.mp4', image: false}]" colour="#f1975b"
+                    shadowColour="#a8693f" [widthDif]="90" [heightDif]="-20">
+                </general-card>
+                <general-card text="After making the framwework of a website, i begin with the colours.
+                Making the general theme of the website."
+                    [media]="[{mediaURL: 'assets/videos/hippy_Frameworking.mp4', image: false}]" colour="#f1975b"
+                    shadowColour="#a8693f" [widthDif]="90" [heightDif]="-20" reverse>
+                </general-card>
+                <general-card text="Finally, before any html is writting, I go through iterations that had previously not
+                been thought about." [media]="[{mediaURL: 'assets/videos/hippy_Finalising.mp4', image: false}]"
+                    colour="#f1975b" shadowColour="#a8693f" [widthDif]="90" [heightDif]="-20">
+                </general-card>
             </div>
         </div>
     </div>
