--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div id="fakeBody" [class]="'fake-body' + (windows[0].scrolling ? '' : ' disable-scrolling')">
+<div id="fakeBody" [class]="'fake-body' + (homeBodyScroling ? '' : ' disable-scrolling')">
 
   <div id="prewindow">
     <div class="home-container">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="categories" id="categories">
-      <category *ngFor="let category of categories" (click)="scrollTo(category.id)" [marginLeft]="category.marginLeft"
+      <category *ngFor="let category of windows" (click)="scrollTo(category.id)" [marginLeft]="category.marginLeft"
         [background]="category.background">
         <div class="category-text">{{category.name}}</div>
       </category>
@@ -42,35 +42,8 @@
   </div>
 
   <div class="windows" id="windows">
-    <window [id]="windows[1].id" [view]="windows[1].inView" name="WebDesign" backgroundClass="grey-background"
-      borderColor="#0F0B04" [scrolling]="windows[1].scrolling" (hitBottom)="scrollTo(windows[1].below)"
-      (hitTop)="scrollTo(windows[1].above)">
-      <web-dev></web-dev>
-    </window>
-    <window [id]="windows[2].id" [view]="windows[2].inView" name="ComputerGraphics" backgroundClass="black-background"
-      borderColor="#0BA81A" [scrolling]="windows[2].scrolling" (hitBottom)="scrollTo(windows[2].below)"
-      (hitTop)="scrollTo(windows[2].above)">
-      <graphics-engine></graphics-engine>
-    </window>
-    <window [id]="windows[3].id" [view]="windows[3].inView" name="Networking" backgroundClass="blue-wavy-background"
-      borderColor="rgb(95 195 199)" [scrolling]="windows[3].scrolling" (hitBottom)="scrollTo(windows[3].below)"
-      (hitTop)="scrollTo(windows[3].above)">
-      <networking></networking>>
-    </window>
-    <window [id]="windows[4].id" [view]="windows[4].inView" name="GraphicDesign" backgroundClass="brown-background"
-      borderColor="#6D491C" [scrolling]="windows[4].scrolling" (hitBottom)="scrollTo(windows[4].below)"
-      (hitTop)="scrollTo(windows[4].above)">
-      <web-design></web-design>
-    </window>
-    <window [id]="windows[5].id" [view]="windows[5].inView" name="WebDevelopment" backgroundClass="pastelle-background"
-      borderColor="#B5E9F9" [scrolling]="windows[5].scrolling" (hitBottom)="scrollTo(windows[5].below)"
-      (hitTop)="scrollTo(windows[5].above)">
-      <graphic-design></graphic-design>
-    </window>
-    <window [id]="windows[6].id" [view]="windows[6].inView" name="Multimedia" backgroundClass="grid-background"
-      borderColor="#D60EAA" [scrolling]="windows[6].scrolling" (hitBottom)="scrollTo(windows[6].below)"
-      (hitTop)="scrollTo(windows[6].above)">
-      <multimedia></multimedia>
+    <window *ngFor="let window of windows" [window]="window" [id]="window.id" (hitTop)="scrollTo(window.above)"
+      (hitBottom)="scrollTo(window.below)">
     </window>
   </div>
 
