--- a/src/app/windows/graphics-engine/graphics-engine.component.css
+++ b/src/app/windows/graphics-engine/graphics-engine.component.css
@@ -1,3 +1,13 @@
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 83%;
+    gap: 1.6rem;
+    padding-bottom: 8rem;
+    color: white;
+}
+
 .bitsream-font {
     font-family: Bitstream;
 }
