--- a/src/app/windows/graphic-design/graphic-design.component.css
+++ b/src/app/windows/graphic-design/graphic-design.component.css
@@ -1,3 +1,12 @@
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 83%;
+    gap: 5.3rem;
+    padding-bottom: 8rem;
+}
+
 .title {
     font-family: Segoe-UI;
     color: #707070;
