--- a/src/app/windows/web-dev/web-dev.component.css
+++ b/src/app/windows/web-dev/web-dev.component.css
@@ -1,3 +1,13 @@
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 83%;
+    gap: 1.6rem;
+    padding-bottom: 8rem;
+    color: white;
+}
+
 .skillset {
     flex-basis: 35%;
     display: flex;
@@ -70,6 +80,7 @@
         gap: unset;
         justify-content: space-around;
     }
+
     .skill-display {
         flex-basis: 46%;
         font-size: 9pt;
