--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
       <div class="rightside">
         <p>
           I am a Software developer with experience in the design and
-          deployement of cloud applications
+          deployement of cloud applications.
         </p>
         <p>
           When Designing a product, before any code is written I first make a
