--- a/src/app/windows/graphics-engine/graphics-engine.component.html
+++ b/src/app/windows/graphics-engine/graphics-engine.component.html
@@ -31,7 +31,7 @@
                 [media]="[{mediaURL: 'assets/images/Custom-Engine\ UML.svg', image: true}]" colour="rgb(17 97 24)"
                 shadowColour="#053509" [widthDif]="80" [heightDif]="-30"></general-card>
             <general-card
-                text="Here the User can interact with the Simulation by controlling the movement of a ball. 
+                text="Here the user can interact with the Simulation by controlling the movement of a ball. 
                 Text output has also been added to the program, this is done by using mapping characters to generated font textures and rendering the textures"
                 [media]="[{mediaURL: 'assets/videos/collision_engine_2.mp4', image: false}]" colour="rgb(17 97 24)"
                 shadowColour="#053509" [widthDif]="50" [heightDif]="-10" reverse=""></general-card>
