--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -27,7 +27,7 @@
                     shadowColour="#7a3c12" [widthDif]="90" [heightDif]="-20">
                 </general-card>
                 <general-card text="Here is the first iteration running. It looks rough compared to the design because what is
-                most importtant is to get feedback on the design. Reducing wasted effort."
+                most important is to get feedback on the design. Reducing wasted effort."
                     [media]="[{mediaURL: 'assets/videos/initial sketch running.mp4', image: false}]" colour="#d15e12"
                     shadowColour="#7a3c12" [widthDif]="90" [heightDif]="-20">
                 </general-card>
@@ -53,7 +53,7 @@
                     [media]="[{mediaURL: 'assets/videos/hippy_Frameworking.mp4', image: false}]" colour="#f1975b"
                     shadowColour="#a8693f" [widthDif]="90" [heightDif]="-20">
                 </general-card>
-                <general-card text="After making the framwework of a website, i begin with the colours.
+                <general-card text="After making the framework of a website, I begin with the colours.
                 Making the general theme of the website."
                     [media]="[{mediaURL: 'assets/videos/hippy_Frameworking.mp4', image: false}]" colour="#f1975b"
                     shadowColour="#a8693f" [widthDif]="90" [heightDif]="-20" reverse>
