--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -1,11 +1,11 @@
 <p class="title">Web Development</p>
 <div class="content-container">
     <div class="fluff">
-        <p>It has been 4 years since I rented my first web server. I didnt know how to code HTML,
+        <p>It has been 4 years since I rented my first web server. I did not know how to code HTML,
             javascript or how to serve a file
-            In Hindsight it was'nt the best purchasing desicion for the skillset I had at the time. Since then i
+            In Hindsight it was not the best purchasing desicion for the skillset I had at the time. Since then I
             have
-            learned store data on SQL/NoSQL dataabases.
+            learned how to store data on SQL/NoSQL databases.
             I have learned Transmittion Protocols, all in the effort to serve website Files and API's.</p>
     </div>
     <div class="skillset">
@@ -29,7 +29,7 @@
             I'm not stuck in the past though, where there is no need for self-hosting a service, a cloud service will
             do.
             I have used Google Firebase to handle things such as user authentication and distributed messanging, and
-            have used Cloudflare to cache static files so that content is served to the user faster
+            have used Cloudflare to cache static files so that content is served to the user faster.
         </p>
     </div>
     <div class="divider"></div>
@@ -56,8 +56,8 @@
                 <p>Waitless Digital Menu Platform</p>
                 <div class="desc-and-media reverse">
                     <div id="desc">
-                        <p>This is a website where users can view a Menu of a Restaurant.
-                            All Restaurants have a specific style and theme of menu and this has to be replicated in the
+                        <p>This is a website where users can view a menu of a restaurant.
+                            All restaurants have a specific style and theme of menu and this has to be replicated in the
                             digital menu while not being a static png/svg
                         </p>
                     </div>
@@ -71,10 +71,10 @@
                 <div class="desc-and-media reverse">
                     <div id="desc">
                         <p>Architecture/Stack:
-                            The Project uses Nginx on a hosted server to serve the html content. Menu and Restaurant
+                            The Project uses Nginx on a hosted server to serve the html content. Menu and restaurant
                             data is
                             stored on a MySQL database.
-                            Images are Stored on Google Cloud Buckets
+                            Images are stored on google cloud buckets
                         </p>
                     </div>
                     <div id="media">
@@ -91,7 +91,7 @@
                     [media]="[{mediaURL: 'assets/videos/portfolio_desktop.mp4', image: false}]"
                     colour="rgb(151 202 215)" shadowColour="#4a727c" [heightDif]="80"></general-card>
                 <general-card text="Architecture/Stack:
-                This project makes heavy use of Amazon Web Services. First the source code
+                This project makes use of Amazon Web Services. First the source code
                 is compiled to the build files, and these build files are sent to an s3 bucket.
                 The DNS is configured on Route 53 to fetch content from the Cloudfront CDN, which gets its
                 content from the s3 bucket.
