set relative absolute references not absolute

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <p style="text-align: center">THUTHUKA KHUMALO</p>
     <div class="flex-row align-center" style="height: 45px; gap: 1.2rem">
       <img
-        src="../assets/logos/GitHub_logo.png"
+        src="assets/logos/GitHub_logo.png"
         alt="github"
         height="36px"
         style="cursor: pointer"
