--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -42,23 +42,23 @@
 }
 
 .brown-background {
-    background-image: url(../../assets/images/Noisy-Gradient.png);
+    background-image: url(assets/images/Noisy-Gradient.png);
 }
 
 .pastelle-background {
-    background-image: url(../../assets/images/Pastelle-Noisy-Gradient.png);
+    background-image: url(assets/images/Pastelle-Noisy-Gradient.png);
 }
 
 .grey-background {
-    background-image: url(../../assets/images/Grey-Noisy-Gradient.png);
+    background-image: url(assets/images/Grey-Noisy-Gradient.png);
 }
 
 .black-background {
-    background-image: url(../../assets/images/Hacker-Black.png);
+    background-image: url(assets/images/Hacker-Black.png);
 }
 
 .grid-background {
-    background-image: url(../../assets/images/green-grid-background.png);
+    background-image: url(assets/images/green-grid-background.png);
 }
 
 .blue-wavy-background {
