--- a/src/app/windows/graphic-design/graphic-design.component.html
+++ b/src/app/windows/graphic-design/graphic-design.component.html
@@ -13,10 +13,10 @@
 <div class="card-container">
     <div class="text-container">
         <div class="wait-less-display">
-            <div style="background-image: url(../../../assets/images/Graphic-Design/cassa_capri_screenshot.png);"></div>
-            <div style="background-image: url(../../../assets/images/Graphic-Design/billi_bi_screenshot.png);"></div>
-            <div style="background-image: url(../../../assets/images/Graphic-Design/cassa_capri_table_talker.png);"></div>
-            <div style="background-image: url(../../../assets/images/Graphic-Design/billi_bi_table_talker.png);"></div>
+            <div style="background-image: url(assets/images/Graphic-Design/cassa_capri_screenshot.png);"></div>
+            <div style="background-image: url(assets/images/Graphic-Design/billi_bi_screenshot.png);"></div>
+            <div style="background-image: url(assets/images/Graphic-Design/cassa_capri_table_talker.png);"></div>
+            <div style="background-image: url(assets/images/Graphic-Design/billi_bi_table_talker.png);"></div>
         </div>
     </div>
     <div class="image-container">
@@ -26,10 +26,10 @@
 <div class="card-container reverse-card">
     <div class="text-container">
         <div class="backgrounds-display">
-            <div style="background-image: url(../../../assets/images/Grey-Noisy-Gradient.png);"></div>
-            <div style="background-image: url(../../../assets/images/image.jpg);"></div>
-            <div style="background-image: url(../../../assets/images/Noisy-Gradient.png);"></div>
-            <div style="background-image: url(../../../assets/images/Pastelle-Noisy-Gradient.png);"></div>
+            <div style="background-image: url(assets/images/Grey-Noisy-Gradient.png);"></div>
+            <div style="background-image: url(assets/images/image.jpg);"></div>
+            <div style="background-image: url(assets/images/Noisy-Gradient.png);"></div>
+            <div style="background-image: url(assets/images/Pastelle-Noisy-Gradient.png);"></div>
         </div>
     </div>
     <div class="image-container">
@@ -38,7 +38,7 @@
 </div>
 <div class="card-container">
     <div class="text-container">
-        <img style="height: 85%;" src="../../../assets/images/Graphic-Design/real_friends_final_Trim.gif" alt="Spinning top">
+        <img style="height: 85%;" src="assets/images/Graphic-Design/real_friends_final_Trim.gif" alt="Spinning top">
     </div>
     <div class="image-container">
         <div class="">3D model and display of t-shirt design for client</div>
