--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -63,7 +63,7 @@
                     </div>
                     <div id="media">
                         <video playOnViewport playsinline loop muted height="100%" controls>
-                            <source src="../../../assets/videos/waitless_mobile.mp4" type="video/mp4">
+                            <source src="assets/videos/waitless_mobile.mp4" type="video/mp4">
                             Error Message
                         </video>
                     </div>
@@ -79,7 +79,7 @@
                     </div>
                     <div id="media">
                         <div class="center-image"
-                            style="background-image: url(../../../assets/images/wait-less_infrastructure_diagram.png); height: 100%;">
+                            style="background-image: url(assets/images/wait-less_infrastructure_diagram.png); height: 100%;">
                         </div>
                     </div>
                 </div>
