--- a/src/app/windows/graphics-engine/graphics-engine.component.html
+++ b/src/app/windows/graphics-engine/graphics-engine.component.html
@@ -22,7 +22,7 @@
                 </div>
                 <div id="media">
                     <video playOnViewport playsinline loop muted height="100%" controls>
-                        <source src="../../../assets/videos/collisions_1.mp4" type="video/mp4">
+                        <source src="assets/videos/collisions_1.mp4" type="video/mp4">
                         Error Message
                     </video>
                 </div>
